--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Frontend project using JSON Server as backend",
   "scripts": {
-    "api": "json-server --watch db.json --host 0.0.0.0 --port 5000"
+    "api": "json-server --watch db.json --host 0.0.0.0 --port 5500",
+    "start": "node server.js"
   },
   "devDependencies": {
     "json-server": "^1.0.0-beta.3"
